# diff-pdf-visually

./: .coveragerc  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.rst  diff_pdf_visually_colab_notebook.ipynb  package.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: run-tox.yml
diff_pdf_visually/: __init__.py  __main__.py  constants.py  diff.py  external_programs.py  polyfill.py
tests/: base.tex  base_plus_period.tex  base_plus_white_text.tex  base_shifted_layout.tex  test_examples.py
