[project]
name = "diff-pdf-visually"
description = "Quickly check whether there is a visible difference between two PDFs, using ImageMagick and pdftocairo."
readme = "README.rst"
authors = [{name = "Bram Geron", email = "bram@bram.xyz"}]
maintainers = [{name = "Bram Geron", email = "bram@bram.xyz"}]
license = "MIT OR Apache-2.0"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
]
dependencies = []
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/bgeron/diff-pdf-visually"
Source = "https://github.com/bgeron/diff-pdf-visually"

[project.scripts]
diff-pdf-visually = "diff_pdf_visually.__main__:main"

[requires]
python_version = ['3.9', '3.10', '3.11', '3.12', '3.13']

[build-system]
requires = ['hatchling>=1.26.1']
build-backend = "hatchling.build"

[tool.hatch.version]
path = 'diff_pdf_visually/__init__.py'

[tool.hatch.commands]
prerelease = 'hatch build'
